--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.main-bg {
+/* .main-bg {
   background-image: radial-gradient(circle at center center, rgba(46, 46, 46,0.05) 0%, rgba(46, 46, 46,0.05) 22%,rgba(136, 136, 136,0.05) 22%, rgba(136, 136, 136,0.05) 26%,rgba(106, 106, 106,0.05) 26%, rgba(106, 106, 106,0.05) 66%,rgba(196, 196, 196,0.05) 66%, rgba(196, 196, 196,0.05) 77%,rgba(166, 166, 166,0.05) 77%, rgba(166, 166, 166,0.05) 93%,rgba(76, 76, 76,0.05) 93%, rgba(76, 76, 76,0.05) 100%),radial-gradient(circle at center center, rgb(20,20,20) 0%, rgb(20,20,20) 8%,rgb(20,20,20) 8%, rgb(20,20,20) 46%,rgb(20,20,20) 46%, rgb(20,20,20) 60%,rgb(20,20,20) 60%, rgb(20,20,20) 80%,rgb(20,20,20) 80%, rgb(20,20,20) 82%,rgb(20,20,20) 82%, rgb(20,20,20) 100%); background-size: 43px 43px;
-}
+} */
 
 /* .main-bg {
   background-image: repeating-linear-gradient(46deg, rgba(255,255,255, 0.07) 0px, rgba(255,255,255, 0.07) 1px,transparent 1px, transparent 26px),repeating-linear-gradient(136deg, rgba(255,255,255, 0.07) 0px, rgba(255,255,255, 0.07) 1px,transparent 1px, transparent 26px),linear-gradient(136deg, rgb(29,40,57),rgb(29,40,57));
